make services and about section side by side on computer. going to try changing the font sizes

--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 	<script src="https://use.fontawesome.com/ce33fc6e47.js" async></script>
 	<link rel="stylesheet" type="text/css" href="lib/semantic/semantic.min.css">
 	<script src="lib/semantic/semantic.min.js"></script>
-	<!-- <script src="lib/clipboard.js/clipboard.min.js"></script> -->
 	<link rel="stylesheet" type="text/css" href="public/style.css">
 
 </head>
@@ -48,12 +47,15 @@
 	<div class="container black">
 
 		<div id="services">
-			<h3>SERVICES</h3>
-			<p>Men, women, and children's haircuts, color and highlights, trims and shaves, updo, and all kinds of styles.</p>
-			<p><strong><em>By appointment only</em></strong>.</p>
-
-			<h3>ABOUT</h3>
-			<p>Francisco Mejia is an extremely talented, local hairstylist working out of the luxurious, Sola Salon Studios. It is rare to find a business with such a high rating on Yelp, but it is certainly well earned.  Clients of Francisco love his creative vision, his ability to give people the perfect haircut/style/color, his attention to detail, his fair prices, and his casual personality.</p>
+			<div>
+				<h3>SERVICES</h3>
+				<p>Men, women, and children's haircuts, color and highlights, trims and shaves, updo, and lots of other kinds of styles.</p>
+				<p><strong><em>By appointment only</em></strong>.</p>
+			</div>
+			<div>
+				<h3>ABOUT</h3>
+				<p>Francisco Mejia is an extremely talented, local hairstylist working out of the luxurious, Sola Salon Studios. It is rare to find a business with such a high rating on Yelp, but it is certainly well earned.  Clients of Francisco love his creative vision, his ability to give people the perfect haircut/style/color, his attention to detail, his fair prices, and his friendly personality.</p>
+			</div>
 		</div>
 
 	</div>
