possibly done, need to check font sizes on phone and tablet

--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 	<script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans|Michroma" rel="stylesheet">
 	<script src="https://use.fontawesome.com/ce33fc6e47.js" async></script>
-	<link rel="stylesheet" type="text/css" href="lib/semantic/semantic.min.css">
-	<script src="lib/semantic/semantic.min.js"></script>
+	<link rel="stylesheet" href="public/normalize.css">
 	<link rel="stylesheet" type="text/css" href="public/style.css">
 
 </head>
@@ -31,10 +30,10 @@
 
 	<div id="aboveTheFold">
 		<div class="content">
-			<h1>HAIR  BY FRANCISCO</h1>
+			<h1>HAIR BY FRANCISCO</h1>
 			<div id="info">
-				<h3><a href="tel:805-760-1408"><i class="fa fa-phone"></i> (805) 760 1408</a></h3>
-				<h3><a href="https://maps.google.com/?q=Sola+Salon+Studios,+San+Pedro+Avenue,+San+Antonio,+TX" target="_blank"><i class="marker icon"></i> 15909 San Pedro Ave</a></h3>
+				<h3><a href="tel:805-760-1408"><i class="fa fa-phone"></i>(805) 760 1408</a></h3>
+				<h3><a href="https://maps.google.com/?q=Sola+Salon+Studios,+San+Pedro+Avenue,+San+Antonio,+TX" target="_blank"><i class="fa fa-map-marker"></i>15909 San Pedro Ave</a></h3>
 			</div>
 		</div>
 		<div id="mainImage">
@@ -67,7 +66,6 @@
 				<h3>PHOTOS</h3>
 			</div>
 			<div class="images">
-				<!-- <img src="http://via.placeholder.com/225x135"> -->
 				<div class="column">
 					<img src="images/sola.jpg" alt="Sola Salon Studios">
 					<img src="images/girl/1.jpg" alt="Women's haircut by Francisco">
@@ -162,10 +160,10 @@
 
 	<footer>
 		<div id="links">
-			<a href="https://www.yelp.com/biz/hair-by-francisco-san-antonio" target="_blank"><i class="yelp icon"></i></a>
-			<a href="https://www.facebook.com/HairbyFrancisco/" target="_blank"><i class="facebook f icon"></i></a>
-			<a href="https://www.instagram.com/explore/locations/1006603467/hair-by-francisco-mejia/" target="_blank"><i class="instagram icon"></i></a>
-			<a href="https://maps.google.com/?q=Hair+by+Francisco" target="_blank"><i class="google icon"></i></a>
+			<a href="https://www.yelp.com/biz/hair-by-francisco-san-antonio" target="_blank"><i class="fa fa-yelp"></i></a>
+			<a href="https://www.facebook.com/HairbyFrancisco/" target="_blank"><i class="fa fa-facebook"></i></a>
+			<a href="https://www.instagram.com/explore/locations/1006603467/hair-by-francisco-mejia/" target="_blank"><i class="fa fa-instagram"></i></a>
+			<a href="https://maps.google.com/?q=Hair+by+Francisco" target="_blank"><i class="fa fa-google"></i></a>
 		</div>
 
 		<p>Hair by Francisco <i class="copyright icon"></i>2017</p>
