another stab at font sizes on phone

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 		<div id="services">
 			<div>
 				<h3>SERVICES</h3>
-				<p>Men, women, and children's haircuts, color and highlights, trims and shaves, updo, and lots of other kinds of styles.</p>
+				<p>Men, women, and children's haircuts, color and highlights, trims and shaves, updos, and lots of other kinds of styles.</p>
 				<p><strong><em>By appointment only</em></strong>.</p>
 			</div>
 			<div>
