add favicon, try and fix h1

--- a/index.html
+++ b/index.html
@@ -13,11 +13,17 @@
 	<link rel="stylesheet" href="public/normalize.css">
 	<link rel="stylesheet" type="text/css" href="public/style.css">
 
+	<!-- favicon -->
+	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+	<link rel="manifest" href="/manifest.json">
+	<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#171717">
+	<meta name="theme-color" content="#ffffff">
+
 </head>
 
 <body>
-	<!-- use scissors for favicon -->
-	<!-- <i class="cut icon"></i> -->
 
 	<div id="top"></div>
 
@@ -53,7 +59,7 @@
 			</div>
 			<div>
 				<h3>ABOUT</h3>
-				<p>Francisco Mejia is an extremely talented, local hairstylist working out of the luxurious, Sola Salon Studios. It is rare to find a business with such a high rating on Yelp, but it is certainly well earned.  Clients of Francisco love his creative vision, his ability to give people the perfect haircut/style/color, his attention to detail, his fair prices, and his friendly personality.</p>
+				<p>Francisco Mejia is an extremely talented, local hairstylist working out of the luxurious, Sola Salon Studios. It is rare to find a business with such a high rating on Yelp, but it is certainly well earned. Clients of Francisco love his creative vision, his ability to give people the perfect haircut/style/color, his attention to detail, his fair prices, and his friendly personality.</p>
 			</div>
 		</div>
 
@@ -66,7 +72,7 @@
 				<h3>PHOTOS</h3>
 			</div>
 			<div class="images">
-				
+
 				<div class="column">
 					<img src="images/sola.jpg" alt="Sola Salon Studios">
 					<img src="images/girl/1.jpg" alt="Women's haircut by Francisco">
