fix copyright icon

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 			<a href="https://maps.google.com/?q=Hair+by+Francisco" target="_blank"><i class="fa fa-google"></i></a>
 		</div>
 
-		<p>Hair by Francisco <i class="copyright icon"></i>2017</p>
+		<p>Hair by Francisco <i class="fa fa-copyright"></i>2017</p>
 		<p>Made by <em><a href="http://jaketripp.com" target="_blank">Jake Tripp</a></em></p>
 	</footer>
 
