improve meta description

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>Hair by Francisco</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Francisco Mejia specializes in up do's, color, highlights and styles for men, women, and kids. 100% satisfaction guarantee.">
+	<meta name="description" content="Francisco Mejia specializes in cuts, styles, highlights, and colors for men, women, and kids. By appointment only.">
 
 	<script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans|Michroma" rel="stylesheet">
