change descriptions, change location layout, delete pictures, add pictures, edit pictures

--- a/index.html
+++ b/index.html
@@ -44,8 +44,6 @@
 		</div>
 		<div id="mainImage">
 			<img src="images/boy/11.jpg" alt="Men's haircut by Francisco">
-			<img src="images/girl/13.jpg" alt="Women's haircut by Francisco">
-			<img src="images/kid/6.jpg" alt="Children's haircut by Francisco">
 		</div>
 	</div>
 
@@ -54,12 +52,12 @@
 		<div id="services">
 			<div>
 				<h3>SERVICES</h3>
-				<p>Men, women, and children's haircuts, color and highlights, trims and shaves, updos, and lots of other kinds of styles.</p>
-				<p><strong><em>By appointment only</em></strong>.</p>
+				<p>Men and women's haircuts, coloring, highlights, and styles. Children's haircuts: age 8 and up.</p>
+				<p><strong><em>By appointment only.</em></strong></p>
 			</div>
 			<div>
 				<h3>ABOUT</h3>
-				<p>Francisco Mejia is an extremely talented, local hairstylist working out of the luxurious, Sola Salon Studios. It is rare to find a business with such a high rating on Yelp, but it is certainly well earned. Clients of Francisco love his creative vision, his ability to give people the perfect haircut/style/color, his attention to detail, his fair prices, and his friendly personality.</p>
+				<p>Francisco Mejia is a passionate, local hairstylist. Clients of Francisco love his creative vision, his ability to give people the perfect haircut/style/color, his attention to detail, and his friendly personality.</p>
 			</div>
 		</div>
 
@@ -74,7 +72,6 @@
 			<div class="images">
 
 				<div class="column">
-					<img src="images/sola.jpg" alt="Sola Salon Studios">
 					<img src="images/girl/2.jpg" alt="Women's haircut by Francisco">
 					<img src="images/girl/3.jpg" alt="Women's haircut by Francisco">
 					<img src="images/girl/4.jpg" alt="Women's haircut by Francisco">
@@ -144,9 +141,9 @@
 			<div id="location">
 				<h3>LOCATION</h3>
 				<a href="https://maps.google.com/?q=Sola+Salon+Studios,+San+Pedro+Avenue,+San+Antonio,+TX" target="_blank">
-					<p><strong><em>Sola Salon Studios</em></strong></p>
-					<p>15909 San Pedro Ave, Ste 21</p>
+					<p>15909 San Pedro Ave</p>
 					<p>San Antonio, TX 78232</p>
+					<p><strong><em>Sola Salon Studios, Ste 21</em></strong></p>
 				</a>
 				<p><a href="tel:805-760-1408">(805) 760 1408</a></p>
 			</div>
