add better meta tags, add photo with better aspect ratio for social media links and web crawlers

--- a/index.html
+++ b/index.html
@@ -5,7 +5,16 @@
 	<title>Hair by Francisco</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+	<meta property="og:title" content="Hair by Francisco">
 	<meta name="description" content="Francisco Mejia specializes in cuts, styles, highlights, and colors for men, women, and kids. By appointment only.">
+	<meta property="og:description" content="Francisco Mejia specializes in cuts, styles, highlights, and colors for men, women, and kids. By appointment only.">
+	<meta property="og:image" content="http://hairbyfrancisco.com/meta_image.jpg">
+	<meta property="og:url" content="http://hairbyfrancisco.com">
+	<meta name="twitter:card" content="summary_large_image">
+
+	<meta property="og:site_name" content="Hair by Francisco">
+	<meta name="twitter:image:alt" content="Men's haircut by Francisco">
 
 	<script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans|Michroma" rel="stylesheet">
@@ -135,7 +144,7 @@
 				<a href="https://maps.google.com/?q=Sola+Salon+Studios,+San+Pedro+Avenue,+San+Antonio,+TX" target="_blank">
 					<p>15909 San Pedro Ave</p>
 					<p>San Antonio, TX 78232</p>
-					<p><strong><em>Sola Salon Studios, Ste 21</em></strong></p>
+					<p>Sola Salon Studios, Ste 21</p>
 				</a>
 				<p><a href="tel:805-760-1408">(805) 760 1408</a></p>
 			</div>
