add prefixers to css, fix minor error in js

--- a/index.html
+++ b/index.html
@@ -5,16 +5,17 @@
 	<title>Hair by Francisco</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="description" content="Francisco Mejia specializes in cuts, styles, highlights, and colors for men, women, and kids. By appointment only." />
 
-	<meta property="og:title" content="Hair by Francisco">
-	<meta name="description" content="Francisco Mejia specializes in cuts, styles, highlights, and colors for men, women, and kids. By appointment only.">
-	<meta property="og:description" content="Francisco Mejia specializes in cuts, styles, highlights, and colors for men, women, and kids. By appointment only.">
-	<meta property="og:image" content="http://hairbyfrancisco.com/meta_image.jpg">
-	<meta property="og:url" content="http://hairbyfrancisco.com">
-	<meta name="twitter:card" content="summary_large_image">
+	<meta property="og:title" content="Hair by Francisco" />
+	<meta property="og:type" content="website" />
+	<meta property="og:description" content="Francisco Mejia specializes in cuts, styles, highlights, and colors for men, women, and kids. By appointment only." />
+	<meta property="og:image" content="http://hairbyfrancisco.com/images/meta_image.jpg" />
+	<meta property="og:url" content="http://hairbyfrancisco.com" />
+	<meta property="og:site_name" content="Hair by Francisco" />
 
-	<meta property="og:site_name" content="Hair by Francisco">
-	<meta name="twitter:image:alt" content="Men's haircut by Francisco">
+	<meta name="twitter:card" content="summary_large_image" />
+	<meta name="twitter:image:alt" content="Men's haircut by Francisco" />
 
 	<script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans|Michroma" rel="stylesheet">
@@ -37,10 +38,10 @@
 	<div id="top"></div>
 
 	<div id="navbar">
-		<a data-key="#top" class="active">TOP</a>
-		<a data-key="#services">SERVICES</a>
-		<a data-key="#photos">PHOTOS</a>
-		<a data-key="#contact">CONTACT</a>
+		<a href="#top" class="active">TOP</a>
+		<a href="#services">SERVICES</a>
+		<a href="#photos">PHOTOS</a>
+		<a href="#contact">CONTACT</a>
 	</div>
 
 	<div id="aboveTheFold">
