--- a/index.html
+++ b/index.html
@@ -11,8 +11,11 @@
 	<meta property="og:type" content="website" />
 	<meta property="og:description" content="Francisco Mejia specializes in cuts, styles, highlights, and colors for men, women, and kids. By appointment only." />
 	<meta property="og:image" content="http://hairbyfrancisco.com/images/meta_image.jpg" />
+	<meta property="og:image:width" content="1012" />
+	<meta property="og:image:height" content="530" />
 	<meta property="og:url" content="http://hairbyfrancisco.com" />
 	<meta property="og:site_name" content="Hair by Francisco" />
+	<meta name="og:image:alt" content="Men's haircut by Francisco" />
 
 	<meta name="twitter:card" content="summary_large_image" />
 	<meta name="twitter:image:alt" content="Men's haircut by Francisco" />
