add progressive loading images js back in

--- a/index.html
+++ b/index.html
@@ -305,6 +305,7 @@
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js" defer></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.13/semantic.min.js" defer></script>
+	<script src="js/progressive-image.js"></script>
 	<script src="https://use.fontawesome.com/ce33fc6e47.js" async></script>
 	<script type="text/javascript" src="js/app.js" defer></script>
 </body>
